--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         <p class="subtitulo">Este site irá te ajudar a se planejar para um intercâmbio com algumas dicas. Se você vai fazer ou ainda está na dúvida fique ligados nessas dicas.</p>
     </div>
 
+    <main>
+      <p>Fazer intercâmbio é uma experiência enriquecedora que envolve viver em um país estrangeiro por um período determinado, geralmente com o objetivo de estudar, trabalhar, aprender um novo idioma ou simplesmente mergulhar em uma cultura diferente. Essa experiência oferece uma série de benefícios pessoais, acadêmicos e profissionais. </p>
+      <h2>Os benefíciose em fazer um intercâmbio</h2>
+      <ul>
+        <li>Aprendizado de Idiomas</li>
+        <li>Experiência Cultural</li>
+        <li>Experiência Cultural</li>
+        <li>Experiências Inesquecíveis</li>
+        <li>Amadurecimento</li>
+      </ul>
+    </main>
     
    <div class="depoimentos">
       <h2>Depoimentos</h2>
@@ -37,7 +48,7 @@
         <img class="depoimento_img" src="Dilmar.jpeg" alt="Intercâmbista Dilmar no Canadá">
         <figcaption>Intercâmbista Dilmar no Canadá</figcaption>
       </figure>
-        <p class="depoimentos"><em>"A experiência de conhecer o Canadá e viajar por ele é unica, um país completamente diferente geograficamente, com outra cultura, culinária e língua."</em></p>
+        <p><em>"A experiência de conhecer o Canadá e viajar por ele é unica, um país completamente diferente geograficamente, com outra cultura, culinária e língua."</em></p>
         </div>
         <footer class="name">Dilmar Castanheiro</footer>
         </blockquote>
@@ -48,7 +59,7 @@
         <img src="Gustavo.jpeg" alt="Intercâmbista Gustavo na Nova Zelândia">
         <figcaption>Intercâmbista Gustavo na Nova Zelândia</figcaption>
       </figure>
-        <p class="depoimentos"><em>"Fazer um intercâmbio na Nova Zelândia é uma experiência incrível e enriquecedora. É uma oportunidade de mergulhar em uma cultura vibrante, conhecer uma ampla variedade de paisagens deslumbrantes e fazer amizades duradouras. Aprimorar um novo idioma em um ambiente imersivo e explorar as diversas atividades ao ar livre (com muita adrenalina) são apenas alguns dos aspectos emocionantes dessa aventura."</em></p>
+        <p><em>"Fazer um intercâmbio na Nova Zelândia é uma experiência incrível e enriquecedora. É uma oportunidade de mergulhar em uma cultura vibrante, conhecer uma ampla variedade de paisagens deslumbrantes e fazer amizades duradouras. Aprimorar um novo idioma em um ambiente imersivo e explorar as diversas atividades ao ar livre (com muita adrenalina) são apenas alguns dos aspectos emocionantes dessa aventura."</em></p>
       </div>
         <footer class="name">Gustavo Lopes</footer>
         </blockquote>
@@ -59,7 +70,7 @@
         <img class="depoimentos_img" src="Isabel.jpeg" alt="Intercâmbista Isabel na Nova Zelândia">
         <figcaption>Intercâmbista Isabel na Nova Zelândia</figcaption>
       </figure>
-        <p class="depoimentos"><em>"O intercâmbio foi a coisa mais inesperado da minha vida. Nunca imaginei que um dia poderia viver tanto em tão pouco. O intercâmbio te tira completamente da sua zona de conforto, você meio que perde o seu senso de direção, mas isso é absurdamente incrível pois com o passar dos dias, semanas, meses e até anos, você percebe que ali é o seu novo lar, sua nova vida e aquelas pessoas que inicialmente eram estranhas, se tornam tudo pra você, se tornam sua família. Parte de você vai ficar pra sempre naquele lugar. É uma experiência rica e indescritível (gostei tanto que fui pra outro) 😅🥰. Eu gostaria que todo mundo, pelo menos uma vez na vida, tivesse a oportunidade de vivenciar tudo isso!"</em></p>
+        <p><em>"O intercâmbio foi a coisa mais inesperado da minha vida. Nunca imaginei que um dia poderia viver tanto em tão pouco. O intercâmbio te tira completamente da sua zona de conforto, você meio que perde o seu senso de direção, mas isso é absurdamente incrível pois com o passar dos dias, semanas, meses e até anos, você percebe que ali é o seu novo lar, sua nova vida e aquelas pessoas que inicialmente eram estranhas, se tornam tudo pra você, se tornam sua família. Parte de você vai ficar pra sempre naquele lugar. É uma experiência rica e indescritível (gostei tanto que fui pra outro) 😅🥰. Eu gostaria que todo mundo, pelo menos uma vez na vida, tivesse a oportunidade de vivenciar tudo isso!"</em></p>
       </div>
         <footer class="name">Isabel Garcia</footer>
       </blockquote>
@@ -67,12 +78,16 @@
       <blockquote>
         <div class="content">
         <img class="depoimentos_img" src="Sibelly_.jpeg" alt="Intercâmbista Sibelly na Nova Zelândia">
-        <p class="depoimentos"><em>"Realmente é incrível fazer um intercambio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
+        <p><em>"Realmente é incrível fazer um intercambio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
       </div>
         <footer class="name">Sibelly Vitória Antonio</footer>
       </blockquote>
    </div>
       
+   <div class="parte-final">
+    <p>No entanto, é importante lembrar que o intercâmbio também pode ser desafiador. Você pode enfrentar dificuldades com o idioma, sentir saudades de casa, lidar com choque cultural e enfrentar obstáculos inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
+   </div>
+
       <footer class="rodape">
         <h2><strong>Dicas de Intercâmbio<br>
           by Sibelly</strong></h2>
