--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="recet.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.js">
     <title>Dicas de intercâmbio</title>
      </head>
     <body>
@@ -38,9 +39,10 @@
         <li>Experiências Inesquecíveis</li>
         <li>Amadurecimento</li>
       </ul>
+      <p>No entanto, é importante lembrar que o intercâmbio também pode ser desafiador. Você pode enfrentar dificuldades com o idioma, sentir saudades de casa, lidar com choque cultural e enfrentar obstáculos inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
     </main>
-    
-   <div class="depoimentos">
+
+       <div class="depoimentos">
       <h2>Depoimentos</h2>
       <blockquote>
         <div class="content">
@@ -56,7 +58,7 @@
       <blockquote>
         <div class="content">
         <figure>
-        <img src="Gustavo.jpeg" alt="Intercâmbista Gustavo na Nova Zelândia">
+        <img class="depoimentos_img" src="Gustavo.jpeg" alt="Intercâmbista Gustavo na Nova Zelândia">
         <figcaption>Intercâmbista Gustavo na Nova Zelândia</figcaption>
       </figure>
         <p><em>"Fazer um intercâmbio na Nova Zelândia é uma experiência incrível e enriquecedora. É uma oportunidade de mergulhar em uma cultura vibrante, conhecer uma ampla variedade de paisagens deslumbrantes e fazer amizades duradouras. Aprimorar um novo idioma em um ambiente imersivo e explorar as diversas atividades ao ar livre (com muita adrenalina) são apenas alguns dos aspectos emocionantes dessa aventura."</em></p>
@@ -81,24 +83,26 @@
         <p><em>"Realmente é incrível fazer um intercambio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
       </div>
         <footer class="name">Sibelly Vitória Antonio</footer>
-      </blockquote>
-   </div>
+      </blockquote>>
       
-   <div class="parte-final">
-    <p>No entanto, é importante lembrar que o intercâmbio também pode ser desafiador. Você pode enfrentar dificuldades com o idioma, sentir saudades de casa, lidar com choque cultural e enfrentar obstáculos inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
-   </div>
+  <div class="jogo">
+    <h2>English Travel Game</h2>
+   <iframe src="https://scratch.mit.edu/projects/867681896/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+   <p>Jogo criado com o intuito de ajudar pessoas que vão viajar, e pouca convivência com a lingua inglesa, um jogo educativo e interativo para auxiliar estudantes e demais usuários que gostariam de realizar um intercâmbio de estudos ou realizar alguma viagem e que não tenham um bom domínio na língua inglesa para aprender e aprimorar o vocabulário e aprender com situações reais por meio o jogo.</p>
+ 
+  </div>
 
       <footer class="rodape">
         <h2><strong>Dicas de Intercâmbio<br>
           by Sibelly</strong></h2>
           <p>Gostou de conhecer mais sobre como que funciona um intercâmbio? Conheça o meu diário de intercâmbio que eu fiz em 2022 na Nova Zelândia.</p>
         <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
-          <div class="redes-sociais">
-        <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-        <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-        <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
-        <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
-    </div>
+        <div class="redes-sociais">
+          <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+          <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+          <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+          <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+      </div>
         </footer>
        </body>
       </html>
