--- a/index.html
+++ b/index.html
@@ -79,18 +79,21 @@
           
       <blockquote>
         <div class="content">
+          <figure>
         <img class="depoimentos_img" src="Sibelly_.jpeg" alt="Intercâmbista Sibelly na Nova Zelândia">
-        <p><em>"Realmente é incrível fazer um intercambio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
+        <figcaption>Intercâmbista Isabel na Nova Zelândia</figcaption>
+      </figure>
+        <p><em>"Realmente é incrível fazer um intercâmbio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
       </div>
         <footer class="name">Sibelly Vitória Antonio</footer>
-      </blockquote>>
+      </blockquote>
+       </div>
       
   <div class="jogo">
     <h2>English Travel Game</h2>
    <iframe src="https://scratch.mit.edu/projects/867681896/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
    <p>Jogo criado com o intuito de ajudar pessoas que vão viajar, e pouca convivência com a lingua inglesa, um jogo educativo e interativo para auxiliar estudantes e demais usuários que gostariam de realizar um intercâmbio de estudos ou realizar alguma viagem e que não tenham um bom domínio na língua inglesa para aprender e aprimorar o vocabulário e aprender com situações reais por meio o jogo.</p>
- 
-  </div>
+ </div>
 
       <footer class="rodape">
         <h2><strong>Dicas de Intercâmbio<br>
