--- a/prepare-se.html
+++ b/prepare-se.html
@@ -40,6 +40,17 @@
              </ul>
           </main>
 
+         <footer class="rodape">
+            <h2><strong>Dicas de Intercâmbio<br>
+              by Sibelly</strong></h2>
+              <p>Gostou de conhecer mais sobre como que funciona um intercâmbio? Conheça o meu diário de intercâmbio que eu fiz em 2022 na Nova Zelândia.</p>
+            <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
+            <div class="redes-sociais">
+              <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+              <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+              <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+              <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+          </div>
+            </footer>
     </body>
-
 </html>
