--- a/destinos.html
+++ b/destinos.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Prepare-se - Dicas de intercâmbio</title>
+        <title>Destinos - Dicas de intercâmbio</title>
         <link rel="stylesheet" href="recet.css">
         <link rel="stylesheet" href="destinos.css">
     </head>
@@ -20,6 +20,7 @@
               </div>
           </header>
 
+          <h2>Os destinos mais populares</h2>
     <ul>
       <li class="destino">Austrália</li>
       <figure>
@@ -52,6 +53,18 @@
       </figure>
       <p>A segurança é tão eficaz que a 14ª edição do Índice Global da Paz classificou a Nova Zelândia como o segundo País mais pacífico do mundo em uma lista com mais de 160 participantes. Portanto, se você está buscando a segurança como prioridade, o intercâmbio na Nova Zelândia é uma alternativa a ser considerada.</p>
     </ul>
-    </body>
 
+    <footer class="rodape">
+      <h2><strong>Dicas de Intercâmbio<br>
+        by Sibelly</strong></h2>
+        <p>Gostou de conhecer mais sobre como que funciona um intercâmbio? Conheça o meu diário de intercâmbio que eu fiz em 2022 na Nova Zelândia.</p>
+      <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
+      <div class="redes-sociais">
+        <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+        <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+        <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+        <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+    </div>
+      </footer>
+    </body>
 </html>
