--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
     </div>
 
     <main>
-      <p>Fazer intercâmbio é uma experiência enriquecedora que envolve viver em um país estrangeiro por um período determinado, geralmente com o objetivo de estudar, trabalhar, aprender um novo idioma ou simplesmente mergulhar em uma cultura diferente. Essa experiência oferece uma série de benefícios pessoais, acadêmicos e profissionais. </p>
+      <div class="beneficios">
       <h2>Os benefíciose em fazer um intercâmbio</h2>
+      <p>Fazer intercâmbio é uma experiência enriquecedora que envolve viver em um país estrangeiro por um período determinado, geralmente com o objetivo de estudar, trabalhar, aprender um novo idioma ou simplesmente mergulhar em uma cultura diferente. Essa experiência oferece uma série de benefícios pessoais, acadêmicos e profissionais. </p>
       <ul>
         <li>Aprendizado de Idiomas</li>
         <li>Experiência Cultural</li>
+        <li>Desenvolvimento Pessoal</li>
+        <li>Crescimento da Autoconfiança</li>
         <li>Experiências Inesquecíveis</li>
-        <li>Amadurecimento</li>
+        <li>Visão Global</li>
       </ul>
       <p>No entanto, é importante lembrar que o intercâmbio também pode ser desafiador. Você pode enfrentar dificuldades com o idioma, sentir saudades de casa, lidar com choque cultural e enfrentar obstáculos inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
+    </div>
     </main>
 
        <div class="depoimentos">
@@ -86,7 +90,7 @@
       </div>
         <footer class="name">Sibelly Vitória Antonio</footer>
       </blockquote>
-       </div>
+      </div>
       
   <div class="jogo">
     <h2>English Travel Game</h2>
@@ -97,7 +101,6 @@
       <footer class="rodape">
         <h2><strong>Dicas de Intercâmbio<br>
           by Sibelly</strong></h2>
-          <p>Gostou de conhecer mais sobre como que funciona um intercâmbio? Conheça o meu diário de intercâmbio que eu fiz em 2022 na Nova Zelândia.</p>
         <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
         <div class="redes-sociais">
           <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png" alt="Facebook"></a>
@@ -105,6 +108,7 @@
           <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
           <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
       </div>
+         <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
         </footer>
        </body>
       </html>
