--- a/destinos.html
+++ b/destinos.html
@@ -57,7 +57,6 @@
     <footer class="rodape">
       <h2><strong>Dicas de Intercâmbio<br>
         by Sibelly</strong></h2>
-        <p>Gostou de conhecer mais sobre como que funciona um intercâmbio? Conheça o meu diário de intercâmbio que eu fiz em 2022 na Nova Zelândia.</p>
       <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
       <div class="redes-sociais">
         <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png" alt="Facebook"></a>
@@ -65,6 +64,7 @@
         <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
         <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
     </div>
+       <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
       </footer>
     </body>
 </html>
