--- a/prepare-se.html
+++ b/prepare-se.html
@@ -22,21 +22,36 @@
 
           <main>
             <ul>
-             <li class="topics"><strong>Estude inglês;</strong>
-             <p>A língua inglesa é um dos idiomas mais falados do mundo. E saber se comunicar será necessário. Estude coisas que usamos no nosso cotidiano, prátique bastante a fala, escrita, melhore o seu vocabulário. Fale sem medo de errar, se errar não desista, todos nós erramos. E sempre que não entender peça para repetir o que a pessoa disse.</p></li>
-             <li class="topics"><strong>Cultura local;</strong>
-             <p>Pesquise sobre a cultura local do seu país de destino, feriados, o que eles comemoram, comida, como é o clima. São fatores que irão te ajudar a saber mais sobre o país que irá fazer intercâmbio, até mesmo ajudar a preparar a mala com as roupas adequadas.</p></li>
-             <li class="topics"><strong>Planeje-se financeiramente;</strong>
-             <p>Se planejar financeiramente é muito importante. Você precisa pensar tanto nas passagens de avião quanto na moradia, e alimentação caso ficar em um dormitório sozinho. Fique ligado na mensalidade da escola ou faculdade. Levar dinheiro extra para fazer compras, para comprar lembrancinhas.</p></li>
-             <li class="topics"><strong>Procure informações de sua escola ou univerdade:</strong>
-               <p>Entre em contato com a sua escola ou faculdade para mais informações, como regras, horários, se é obrigatório o uso de uniforme, fique antenado no que está acontecento, como eventos.</p></li>
-             <li class="topics"><strong>Procure informações de sua host family ou dormitório:</strong>
-             <p>Antes da viagem certifique-se onde você vai ficar, veja a localização de sua moradia. Possívelmente a escola irá te enviar um email sobre as informações de sua host family.</p></li>
-             <li class="topics"><strong>Preparando a mala:</strong>
-               <p>Quando estiver preparando sua mala, certifique-se de olhar as regras da empresa aéria que você comprou as passagens. Existem algumas medidas e peso que não podem ultrapassa-los. Você pode levar uma mochila, uma mala de mão e uma de despacho. Não coloque eletrônicos, carregadores e baterias na mala de despacho. Coloque seu passaporte e documentos em um lugar acessível. E líquidos acima de 100ml devem ser colocados na mala de despacho.</p></li>
-             <li class="topics"><strong>Aeroporto:</strong>
+             <li class="topics"><h3>Estude inglês;</h3>
+             <p>A língua inglesa é um dos idiomas mais falados do mundo. E saber se comunicar será necessário. Estude coisas que usamos no nosso cotidiano, prátique bastante a fala, escrita, melhore o seu vocabulário. Fale sem medo de errar, se errar não desista, todos nós erramos. E sempre que não entender peça para repetir o que a pessoa disse.</p>
+             <p>Alguns canais no youtube que recomendo para estudo:</p>
+            
+            </li>
+
+             <li class="topics"><h3>Cultura local;</h3>
+             <p>Pesquise sobre a cultura local do seu país de destino, feriados, o que eles comemoram, comida, como é o clima. São fatores que irão te ajudar a saber mais sobre o país que irá fazer intercâmbio, até mesmo ajudar a preparar a mala com as roupas adequadas.</p>
+            </li>
+
+             <li class="topics"><h3>Planeje-se financeiramente;</h3>
+             <p>Se planejar financeiramente é muito importante. Você precisa pensar tanto nas passagens de avião quanto na moradia, e alimentação caso ficar em um dormitório sozinho. Fique ligado na mensalidade da escola ou faculdade. Levar dinheiro extra para fazer compras, para comprar lembrancinhas.</p>
+            </li>
+
+             <li class="topics"><h3>Procure informações de sua escola ou univerdade:</h3>
+               <p>Entre em contato com a sua escola ou faculdade para mais informações, como regras, horários, se é obrigatório o uso de uniforme, fique antenado no que está acontecento, como eventos.</p>
+              </li>
+
+             <li class="topics"><h3>Procure informações de sua host family ou dormitório:</h3>
+             <p>Antes da viagem certifique-se onde você vai ficar, veja a localização de sua moradia. Possívelmente a escola irá te enviar um email sobre as informações de sua host family.</p>
+            </li>
+
+             <li class="topics"><h3>Preparando a mala:</h3>
+               <p>Quando estiver preparando sua mala, certifique-se de olhar as regras da empresa aéria que você comprou as passagens. Existem algumas medidas e peso que não podem ultrapassa-los. Você pode levar uma mochila, uma mala de mão e uma de despacho. Não coloque eletrônicos, carregadores e baterias na mala de despacho. Coloque seu passaporte e documentos em um lugar acessível. E líquidos acima de 100ml devem ser colocados na mala de despacho.</p>
+              </li>
+
+             <li class="topics"><h3>Aeroporto:</h3>
              <p>Chegue mais cedo no aeroporto para fazer o check-in e veja qual é o seu portão de embarque. Fique atento sobre todas as informações de seu voo, se caso foi cancelado ou irá atrasar.</p>
-             <center><iframe width="560" height="315" src="https://www.youtube.com/embed/etLNo5LsCVA?si=ps_bmAJC2XLGlFK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center></li>
+             <center><iframe width="560" height="315" src="https://www.youtube.com/embed/etLNo5LsCVA?si=ps_bmAJC2XLGlFK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
+            </li>
              </ul>
           </main>
 
