--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
       <div class="beneficios">
       <h2>Os benefíciose em fazer um intercâmbio</h2>
       <p>Fazer intercâmbio é uma experiência enriquecedora que envolve viver em um país estrangeiro por um período determinado, geralmente com o objetivo de estudar, trabalhar, aprender um novo idioma ou simplesmente mergulhar em uma cultura diferente. Essa experiência oferece uma série de benefícios pessoais, acadêmicos e profissionais. </p>
-      <ul>
-        <li>Aprendizado de Idiomas</li>
-        <li>Experiência Cultural</li>
-        <li>Desenvolvimento Pessoal</li>
-        <li>Crescimento da Autoconfiança</li>
-        <li>Experiências Inesquecíveis</li>
-        <li>Visão Global</li>
-      </ul>
+     
+        <div class="botoes">
+        <button class="botao">Aprendizado de Idiomas</button>
+        <button class="botao">Experiência Cultural</button>
+        <button class="botao">Desenvolvimento Pessoal</button>
+        <button class="botao">Crescimento da Autoconfiança</button>
+        <button class="botao">Experiências Inesquecíveis</button>
+        <button class="botao">Visão Global</button>
+      </div>
+        
       <p>No entanto, é importante lembrar que o intercâmbio também pode ser desafiador. Você pode enfrentar dificuldades com o idioma, sentir saudades de casa, lidar com choque cultural e enfrentar obstáculos inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
     </div>
     </main>
