--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main>
       <div class="beneficios">
-      <h2>Os benefíciose em fazer um intercâmbio</h2>
+      <h2>Os benefícios em fazer um intercâmbio</h2>
       <p>Fazer intercâmbio é uma experiência enriquecedora que envolve viver em um país estrangeiro por um período determinado, geralmente com o objetivo de estudar, trabalhar, aprender um novo idioma ou simplesmente mergulhar em uma cultura diferente. Essa experiência oferece uma série de benefícios pessoais, acadêmicos e profissionais. </p>
      
         <div class="botoes">
@@ -86,7 +86,7 @@
         <div class="content">
           <figure>
         <img class="depoimentos_img" src="Sibelly_.jpeg" alt="Intercâmbista Sibelly na Nova Zelândia">
-        <figcaption>Intercâmbista Isabel na Nova Zelândia</figcaption>
+        <figcaption>Intercâmbista Sibelly na Nova Zelândia</figcaption>
       </figure>
         <p><em>"Realmente é incrível fazer um intercâmbio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
       </div>
