--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br>
       <p>No entanto, é importante lembrar que o intercâmbio também pode ser desafiador. Você pode enfrentar dificuldades com o idioma, sentir saudades de casa, lidar com choque cultural e enfrentar obstáculos inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
      
-        <img src="giphy.gif" alt="gif de um avião">
+        <img src="airplane.gif" alt="gif de um avião">
       
       </div>
     </main>
