--- a/prepare-se.html
+++ b/prepare-se.html
@@ -24,7 +24,8 @@
             <ul>
              <li class="topics"><h3>Estude inglês;</h3>
              <p>A língua inglesa é um dos idiomas mais falados do mundo. E saber se comunicar será necessário. Estude coisas que usamos no nosso cotidiano, prátique bastante a fala, escrita, melhore o seu vocabulário. Fale sem medo de errar, se errar não desista, todos nós erramos. E sempre que não entender peça para repetir o que a pessoa disse.</p>
-             <p>Alguns canais no youtube que recomendo para estudo:</p>
+
+                 <img src="study.gif" alt="Bart Simpson estudando">
             
             </li>
 
