--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="prepare-se.html">Prepare-se</a></li>
           <li><a href="destinos.html">Destinos</a></li>
+          <li><a href="sobre.html">Sobre mim</a></li>
         </ul>
         </nav>
         </div>
@@ -28,6 +29,8 @@
       <h1>DICAS DE INTERCÂMBIO</h1>
         <p class="subtitulo">Este site irá te ajudar a se planejar para um intercâmbio com algumas dicas. Se você vai fazer ou ainda está na dúvida fique ligados nessas dicas.</p>
     </div>
+
+    <div class="container">
 
     <main>
       <div class="beneficios">
@@ -52,35 +55,13 @@
     </div>
     </main>
 
-    <style>
-      /* Adicione algum estilo conforme necessário */
-      .depoimentos {
-        width: 60%;
-        margin: 0 auto;
-        text-align: center;
-      }
-  
-      .depoimentos blockquote {
-        display: none;
-      }
-  
-      .depoimentos blockquote.active {
-        display: block;
-      }
-  
-      .carousel-controls {
-        font-size: 24px;
-        cursor: pointer;
-      }
-    </style>
-
        <div class="depoimentos">
         <div class="carousel-controls left" onclick="changeDepoimento(-1)">&#10094;</div>
       <h2>Depoimentos</h2>
       <blockquote class="active">
         <div class="content">
         <figure>
-        <img class="depoimento_img" src="Dilmar.jpeg" alt="Intercâmbista Dilmar no Canadá">
+        <img class="depoimentos_img" src="Dilmar.jpeg" alt="Intercâmbista Dilmar no Canadá">
         <figcaption>Intercâmbista Dilmar no Canadá</figcaption>
       </figure>
         <p><em>"A experiência de conhecer o Canadá e viajar por ele é unica, um país completamente diferente geograficamente, com outra cultura, culinária e língua."</em></p>
@@ -168,5 +149,6 @@
       </div>
          <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
         </footer>
+
        </body>
       </html>
