--- a/destinos.html
+++ b/destinos.html
@@ -15,6 +15,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="prepare-se.html">Prepare-se</a></li>
                   <li><a href="destinos.html">Destinos</a></li>
+                  <li><a href="sobre.html">Sobre mim</a></li>
                 </ul>
               </nav>
               </div>
