--- a/prepare-se.html
+++ b/prepare-se.html
@@ -5,8 +5,6 @@
         <title>Prepare-se - Dicas de intercâmbio</title>
         <link rel="stylesheet" href="recet.css">
         <link rel="stylesheet" href="prepare-se.css">
-        <link rel="stylesheet" href="musica.html">
-        <link rel="stylesheet" href="nativos.html">
     </head>
     <body>
         <header>
@@ -17,6 +15,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="prepare-se.html">Prepare-se</a></li>
                   <li><a href="destinos.html">Destinos</a></li>
+                  <li><a href="sobre.html">Sobre mim</a></li>
                 </ul>
               </nav>
           </div>
