--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
         // Exibe o primeiro depoimento ao carregar a página
         showDepoimento(currentIndex);
       </script>
+
+    <section class="objetivos">
+      <h2 class"objetivo-titulo">Meus objetivos de viagem</h2>
+      <button class="botoes">Países que quero conhecer</button>
+      <button class="botoes">Viagens para esse ano</button>
+      <button class="botoes">Viagens futuras</button>
+      <button class="botoes">Datas de embarque</button>
+    </section>
       
   <div class="jogo">
     <h2>English Travel Game</h2>
