--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
       <header>
         <div class="caixa">
-          <h1>Bem vindos</h1>
+          <h1>Bem-vindos</h1>
         <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -108,7 +108,7 @@
         <img class="depoimentos_img" src="Sibelly_.jpeg" alt="Intercâmbista Sibelly na Nova Zelândia">
         <figcaption>Intercâmbista Sibelly na Nova Zelândia</figcaption>
       </figure>
-        <p><em>"Realmente é incrível fazer um intercâmbio! Ganhamos conhecimento e aprendemos a ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
+        <p><em>"Realmente é incrível fazer um intercâmbio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
       </div>
         <footer class="name">Sibelly Vitória Antonio</footer>
       </blockquote>
