--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="content">
         <figure>
         <img class="depoimentos_img" src="Dilmar.jpeg" alt="Intercâmbista Dilmar no Canadá">
-        <figcaption>Intercâmbista Dilmar no Canadá</figcaption>
+        <figcaption>Canadá</figcaption>
       </figure>
         <p><em>"A experiência de conhecer o Canadá e viajar por ele é unica, um país completamente diferente geograficamente, com outra cultura, culinária e língua."</em></p>
         </div>
@@ -73,7 +73,7 @@
         <div class="content">
         <figure>
         <img class="depoimentos_img" src="Gustavo.jpeg" alt="Intercâmbista Gustavo na Nova Zelândia">
-        <figcaption>Intercâmbista Gustavo na Nova Zelândia</figcaption>
+        <figcaption>Nova Zelândia</figcaption>
       </figure>
         <p><em>"Fazer um intercâmbio na Nova Zelândia é uma experiência incrível e enriquecedora. É uma oportunidade de mergulhar em uma cultura vibrante, conhecer uma ampla variedade de paisagens deslumbrantes e fazer amizades duradouras. Aprimorar um novo idioma em um ambiente imersivo e explorar as diversas atividades ao ar livre (com muita adrenalina) são apenas alguns dos aspectos emocionantes dessa aventura."</em></p>
       </div>
@@ -84,7 +84,7 @@
         <div class="content">
         <figure>
         <img class="depoimentos_img" src="Isabel.jpeg" alt="Intercâmbista Isabel na Nova Zelândia">
-        <figcaption>Intercâmbista Isabel na Nova Zelândia</figcaption>
+        <figcaption>Nova Zelândia e Índia</figcaption>
       </figure>
         <p><em>"O intercâmbio foi a coisa mais inesperado da minha vida. Nunca imaginei que um dia poderia viver tanto em tão pouco. O intercâmbio te tira completamente da sua zona de conforto, você meio que perde o seu senso de direção, mas isso é absurdamente incrível pois com o passar dos dias, semanas, meses e até anos, você percebe que ali é o seu novo lar, sua nova vida e aquelas pessoas que inicialmente eram estranhas, se tornam tudo pra você, se tornam sua família. Parte de você vai ficar pra sempre naquele lugar. É uma experiência rica e indescritível (gostei tanto que fui pra outro) 😅🥰. Eu gostaria que todo mundo, pelo menos uma vez na vida, tivesse a oportunidade de vivenciar tudo isso!"</em></p>
       </div>
@@ -95,7 +95,7 @@
         <div class="content">
           <figure>
         <img class="depoimentos_img" src="Pedro.jpeg" alt="Intercâmbista Pedro na Austrália">
-        <figcaption>Intercâmbista Pedro na Austrália</figcaption>
+        <figcaption>Austrália</figcaption>
       </figure>
         <p><em>"Conhecer a Austrália sem dúvida foi inesquecível, vivi mais em 6 meses lá do que 16 anos no Brasil, país totalmente diferente com paisagens deslumbrantes, praias magníficas e uma diversidade cultural que me encantou. Aprendi muito durante o meu intercâmbio, tanto academicamente quanto pessoalmente."</em></p>
       </div>
@@ -106,7 +106,7 @@
         <div class="content">
           <figure>
         <img class="depoimentos_img" src="Sibelly_.jpeg" alt="Intercâmbista Sibelly na Nova Zelândia">
-        <figcaption>Intercâmbista Sibelly na Nova Zelândia</figcaption>
+        <figcaption>Nova Zelândia</figcaption>
       </figure>
         <p><em>"Realmente é incrível fazer um intercâmbio! Ganhamos conhecimento e aprendemos ser mais independentes, além conhecer pessoas e lugares novos pelo mundo. O meu intercâmbio foi uma das melhores experiências da minha vida."</em></p>
       </div>
