--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
 
         <div class="apresentacao">
             <img class="img-inicio" src="Foto com bandeira.jpeg" alt="Imagem da criadora do site">
-            <p>Olá! Me chamo Sibelly e tenho 17 anos. Em 2022, fui uma das participantes do <strong>Ganhando o Mundo 2ª Edição</strong>, uma oportunidade única destinada a 100 alunos de escolas públicas do Paraná. Essa experiência me levou a um intercâmbio de três meses na deslumbrante Nova Zelândia. Desde os meus 11 anos, nutria o sonho de estudar no exterior, mas sabia que o caminho seria desafiador. Foi somente aos 15 anos, em 2022, que tudo mudou. Meu intercâmbio foi uma jornada incrível, repleta de momentos memoráveis e histórias cativantes para compartilhar.</p>
+            <p>Olá! Meu nome é Sibelly e tenho 17 anos. Em 2022, fui uma das participantes do <strong>Ganhando o Mundo 2ª Edição</strong>, uma oportunidade única destinada a 100 alunos de escolas públicas do Paraná. Essa experiência me levou a um intercâmbio de três meses na deslumbrante Nova Zelândia. Desde os meus 11 anos, nutria o sonho de estudar no exterior, mas sabia que o caminho seria desafiador. Foi somente aos 15 anos, em 2022, que tudo mudou. Meu intercâmbio foi uma jornada incrível, repleta de momentos memoráveis e histórias cativantes para compartilhar.</p>
             </div>
 
   <div class="Depoimentos">
