--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
       </div>
         <footer class="name">Pedro Barbieri</footer>
       </blockquote>
+
+      <blockquote>
+        <div class="content">
+          <figure>
+        <img class="depoimentos_img" src="Ronaldo.jpeg" alt="Intercâmbista Ronanaldo na Austrália">
+        <figcaption>Austrália</figcaption>
+      </figure>
+        <p><em>"Durante meus seis meses em Hobart, Tasmânia, tive uma experiência intensa e enriquecedora, tanto nos estudos quanto na vida cultural. Onde no Elizabeth College, o ambiente era acolhedor e as aulas interativas, o que me ajudou a me adaptar rapidamente. O contato com outras culturas foi incrível, e o respeito dos australianos pelas diferenças me marcou muito. Participei do Hobart Chess Club, onde fiz amizades e me conectei ainda mais com a comunidade local. Nos meus tempos livres, explorei as paisagens naturais da região, que complementaram perfeitamente minha vivência intercultural e pessoal."</em></p>
+      </div>
+        <footer class="name">Ronaldo de O. Burgos</footer>
+      </blockquote>
           
       <blockquote>
         <div class="content">
