--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
 
       <blockquote>
         <div class="content">
+        <figure>
+        <img class="depoimentos_img" src="Otavio.jpeg" alt="Intercâmbista Otávio no Canadá">
+        <figcaption>Canadá</figcaption>
+      </figure>
+        <p><em>"Durante seis meses, tive a oportunidade de viver em outro país e mergulhar em uma cultura completamente nova: a canadense. Estudei em uma escola católica na cidade de Red Deer, onde minha família anfitriã era colombiana. Por meio do programa Ganhando o Mundo, realizei meu sonho de ver a neve e participei de diversas atividades que sempre desejei, como praticar snowboarding em uma montanha e acampar com amigos. Essas experiências ficarão gravadas na minha memória com muito carinho e saudade."</em></p>
+        </div>
+        <footer class="name">Otávio Moraes da Costa</footer>
+        </blockquote>
+
+      <blockquote>
+        <div class="content">
           <figure>
         <img class="depoimentos_img" src="Pedro.jpeg" alt="Intercâmbista Pedro na Austrália">
         <figcaption>Austrália</figcaption>
