--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
   <div class="titulo-principal">
     <h1>DICAS DE INTERCÂMBIO</h1>
-    <p class="subtitulo">Este site irá te ajudar a se planejar para um intercâmbio com algumas dicas. Se você vai fazer
-      ou ainda está na dúvida fique ligados nessas dicas.</p>
+    <p class="subtitulo titulo">Este site foi criado para te ajudar a planejar seu intercâmbio, oferecendo dicas valiosas. Seja você alguém que já está decidido ou ainda está em dúvida, confira nossas orientações e prepare-se para essa experiência incrível!</p>
   </div>
 
   <div class="container">
@@ -85,7 +84,7 @@
           dificuldades com o idioma, sentir saudades de casa, lidar com choque cultural e enfrentar obstáculos
           inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
 
-        <figure>
+        <figure class="efeito-na-imagem1">
         <img class="gif" src="airplane.gif" alt="gif de um avião">
         <figcaption>Fonte: Gifer.</figcaption>
       </figure>
@@ -225,11 +224,11 @@
     </script>
 
     <div class="jogo">
-      <h2>English Travel Game</h2>
+      <h2 class="titulo">English Travel Game</h2>
       <iframe class="jogo" src="https://scratch.mit.edu/projects/867681896/embed" allowtransparency="true" width="800" height="490"
         frameborder="0" scrolling="no" allowfullscreen></iframe>
-      <p>Jogo criado com o intuito de ajudar pessoas que vão viajar, e pouca convivência com a lingua inglesa, um jogo
-        educativo e interativo para auxiliar estudantes e demais usuários que gostariam de realizar um intercâmbio de
+      <p>Jogo criado com o intuito de ajudar pessoas que vão viajar, e pouca convivência com a <strong>lingua inglesa</strong>, um <strong>jogo
+        educativo</strong> e interativo para auxiliar estudantes e demais usuários que gostariam de realizar um intercâmbio de
         estudos ou realizar alguma viagem e que não tenham um bom domínio na língua inglesa para aprender e aprimorar o
         vocabulário e aprender com situações reais por meio o jogo.</p>
     </div>
